stylesheets/stylesheet.css
@font-face {
  font-family: Lato;
  font-weight: normal;
  font-style: normal;
  src: url("../fonts/lato/lato-light.eot");
  src: url("../fonts/lato/lato-light.eot?#iefix") format("embedded-opentype"), url("../fonts/lato/lato-light.woff") format("woff"), url("../fonts/lato/lato-light.ttf") format("truetype"), url("../fonts/lato/lato-light.svg#Lato") format("svg"); }

@font-face {
  font-family: Lato;
  font-weight: bold;
  font-style: normal;
  src: url("../fonts/lato/lato-regular.eot");
  src: url("../fonts/lato/lato-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/lato/lato-regular.woff") format("woff"), url("../fonts/lato/lato-regular.ttf") format("truetype"), url("../fonts/lato/lato-regular.svg#Lato") format("svg"); }

@font-face {
  font-family: Lato;
  font-weight: normal;
  font-style: italic;
  src: url("../fonts/lato/lato-light-italic.eot");
  src: url("../fonts/lato/lato-light-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/lato/lato-light-italic.woff") format("woff"), url("../fonts/lato/lato-light-italic.ttf") format("truetype"), url("../fonts/lato/lato-light-italic.svg#Lato") format("svg"); }

@font-face {
  font-family: Lato;
  font-weight: bold;
  font-style: italic;
  src: url("../fonts/lato/lato-regular-italic.eot");
  src: url("../fonts/lato/lato-regular-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/lato/lato-regular-italic.woff") format("woff"), url("../fonts/lato/lato-regular-italic.ttf") format("truetype"), url("../fonts/lato/lato-regular-italic.svg#Lato") format("svg"); }

* {
  box-sizing: border-box; }

body {
  padding: 0;
  margin: 0;
  background-color: white;
  font-family: Lato;
  font-size: 16px;
  line-height: 1.5;
  color: #606c71;
  overflow-x: hidden;
}

a {
  color: #1e6bb8;
  text-decoration: none; }
  a:hover {
    text-decoration: underline; }

.site-footer a {
  color: #3f8cb8;
}

p {
  text-align: justify;
}

.btn {
  display: inline-block;
  margin-bottom: 1rem;
  color: rgba(255, 255, 255, 0.7);
  background-color: rgba(255, 255, 255, 0.08);
  border-color: rgba(255, 255, 255, 0.2);
  border-style: solid;
  border-width: 1px;
  border-radius: 0.3rem;
  transition: color 0.2s, background-color 0.2s, border-color 0.2s;

  -webkit-transform: translateZ(1px);
  transform: translateZ(1px);
}
  .btn + .btn {
    margin-left: 1rem;}

 .btn::selection {
   background: transparent;
 }

 .btn::-moz-selection {
   background: transparent;
 }

.btn:hover {
  color: rgba(255, 255, 255, 0.8);
  text-decoration: none;
  background-color: rgba(255, 255, 255, 0.2);
  border-color: rgba(255, 255, 255, 0.3); }

@media screen and (min-width: 64em) {
  .btn {
    padding: 0.75rem 1rem; } }

@media screen and (min-width: 42em) and (max-width: 64em) {
  .btn {
    padding: 0.6rem 0.9rem;
    font-size: 0.9rem; } }

@media screen and (max-width: 42em) {
  .btn {
    display: block;
    width: 100%;
    padding: 0.75rem;
    font-size: 0.9rem; }
    .btn + .btn {
      margin-top: 1rem;
      margin-left: 0; } }

.page-header,
.preview {
  color: #fff;
  text-align: center;
}

 .page-header{
   background-color: #000055;
 }

 .preview{
   background-color: #1a1a1a;
   background-image: linear-gradient(#1a1a1a 33%, #000);
 }

@media screen and (min-width: 64em) {
  .page-header,
  .preview {
    padding: 5rem 6rem; } }

@media screen and (min-width: 42em) and (max-width: 64em) {
  .page-header,
  .preview {
    padding: 3rem 4rem; } }

@media screen and (min-width: 42em){
  .page-header{
    background-image: linear-gradient(rgba(0,0,85,0) 50%, rgba(26,26,26,0), #1a1a1a), url(../images/stars.png), linear-gradient(#000055, #1a1a1a);
  }
}

@media screen and (max-width: 42em) {
  .page-header,
  .preview {
    padding: 2rem 1rem;
  }

  .page-header{
    background-image: linear-gradient(rgba(0,0,85,0) 50%, rgba(26,26,26,0), #1a1a1a), url(../images/stars-sd.png), linear-gradient(#000055, #1a1a1a);
  }
}



.project-name {
  margin-top: 0;
  margin-bottom: 0.1rem; }

@media screen and (min-width: 64em) {
  .project-name {
    font-size: 3.25rem; } }

@media screen and (min-width: 42em) and (max-width: 64em) {
  .project-name {
    font-size: 2.25rem; } }

@media screen and (max-width: 42em) {
  .project-name {
    font-size: 1.75rem; } }

.project-tagline {
  margin-bottom: 2rem;
  font-weight: normal;
  opacity: 0.7; }

@media screen and (min-width: 64em) {
  .project-tagline {
    font-size: 1.25rem; } }

@media screen and (min-width: 42em) and (max-width: 64em) {
  .project-tagline {
    font-size: 1.15rem; } }

@media screen and (max-width: 42em) {
  .project-tagline {
    font-size: 1rem; } }

.main-content :first-child {
  margin-top: 0; }
.main-content img {
  max-width: 100%; }
.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-weight: bold;
  color: #000055; }



@media screen and (min-width: 42em) {
  .main-content h1 {
    font-size: 3.1rem;
  }
  .main-content h2 {
    font-size: 2.75rem;
  }
  .main-content h3 {
    font-size: 2.4rem;
  }
  .main-content h4 {
    font-size: 2.05rem;
  }
  .main-content h5 {
    font-size: 1.7rem;
  }
  .main-content h6 {
    font-size: 1.35rem;
  }
}

@media screen and (max-width: 42em) {
  .main-content h1 {
    font-size: 2.25rem;
  }
  .main-content h2 {
    font-size: 2rem;
  }
  .main-content h3 {
    font-size: 1.75rem;
  }
  .main-content h4 {
    font-size: 1.5rem;
  }
  .main-content h5 {
    font-size: 1.25rem;
  }
  .main-content h6 {
    font-size: 1rem;
  }
}

.main-content p {
  margin-bottom: 1em; }
.main-content code {
  padding: 2px 4px;
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  font-size: 0.9rem;
  color: #383e41;
  background-color: #f3f6fa;
  border-radius: 0.3rem; }
.main-content pre {
  padding: 0.8rem;
  margin-top: 0;
  margin-bottom: 1rem;
  font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
  color: #567482;
  word-wrap: normal;
  background-color: #f3f6fa;
  border: solid 1px #dce6f0;
  border-radius: 0.3rem; }
  .main-content pre > code {
    padding: 0;
    margin: 0;
    font-size: 0.9rem;
    color: #567482;
    word-break: normal;
    white-space: pre;
    background: transparent;
    border: 0; }
.main-content .highlight {
  margin-bottom: 1rem; }
  .main-content .highlight pre {
    margin-bottom: 0;
    word-break: normal; }
.main-content .highlight pre, .main-content pre {
  padding: 0.8rem;
  overflow: auto;
  font-size: 0.9rem;
  line-height: 1.45;
  border-radius: 0.3rem; }
.main-content pre code, .main-content pre tt {
  display: inline;
  max-width: initial;
  padding: 0;
  margin: 0;
  overflow: initial;
  line-height: inherit;
  word-wrap: normal;
  background-color: transparent;
  border: 0; }
  .main-content pre code:before, .main-content pre code:after, .main-content pre tt:before, .main-content pre tt:after {
    content: normal; }
.main-content ul, .main-content ol {
  margin-top: 0; }
.main-content blockquote {
  padding: 0 1rem;
  margin-left: 0;
  color: #819198;
  border-left: 0.3rem solid #dce6f0; }
  .main-content blockquote > :first-child {
    margin-top: 0; }
  .main-content blockquote > :last-child {
    margin-bottom: 0; }
.main-content table {
  display: block;
  width: 100%;
  overflow: auto;
  word-break: normal;
  word-break: keep-all; }
  .main-content table th {
    font-weight: bold; }
  .main-content table th, .main-content table td {
    padding: 0.5rem 1rem;
    border: 1px solid #e9ebec; }
.main-content dl {
  padding: 0; }
  .main-content dl dt {
    padding: 0;
    margin-top: 1rem;
    font-size: 1rem;
    font-weight: bold; }
  .main-content dl dd {
    padding: 0;
    margin-bottom: 1rem; }
.main-content hr {
  height: 2px;
  padding: 0;
  margin: 1rem 0;
  background-color: #eff0f1;
  border: 0; }

@media screen and (min-width: 64em) {
  .main-content {
    max-width: 64rem;
    padding: 2rem 6rem;
    margin: 0 auto;
    font-size: 1.1rem; } }

@media screen and (min-width: 42em) and (max-width: 64em) {
  .main-content {
    padding: 2rem 4rem;
    font-size: 1.1rem; } }

@media screen and (max-width: 42em) {
  .main-content {
    padding: 2rem 1rem;
    font-size: 1rem; } }

.site-footer {
  padding-top: 2rem;
  margin-top: 2rem;
  text-align: center;
  color: #fff;
  background-color: #000055;
  background-image: linear-gradient(#1a1a1a, rgba(26,26,26,0) 50%, rgba(0,0,85,0)), url(../images/stars.png), linear-gradient(#1a1a1a, #000055);
}

.site-footer-owner {
  display: block; }

.site-footer-credits {
  color: #617178; }

@media screen and (min-width: 64em) {
  .site-footer {
    font-size: 1rem;
    padding: 5rem 6rem;
  }

  .site-footer-credits {
    font-size: 0.8rem
  }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .site-footer {
    font-size: 1rem;
    padding: 3rem 4rem;
  }

  .site-footer-credits {
    font-size: 0.8rem
  }
}

@media screen and (max-width: 42em) {
  .site-footer {
    font-size: 0.9rem;
    padding: 2rem 1rem;
  }

  .site-footer-credits {
    font-size: 0.7rem
  }
}

.lightfx{
  pointer-events: none;
}


.black-hole{
  width: 100%;
  border-radius: 40%;
}

@media screen and (min-width: 42em) {
  .black-hole{
    background-image: url(../images/stars.png);
  }
}

@media screen and (max-width: 42em) {
  .black-hole{
    background-image: url(../images/stars-sd.png);
  }
}

.black-hole:not(:first-child){
  position: absolute;
  top: 0;
  left: 0;
}

.black-hole:first-child{
  opacity: 0.95;
}

.black-hole:nth-child(2){
  -webkit-transform: scale(0.75);
  transform: scale(0.75);
  opacity: 0.725;
  z-index: -1;
}

.black-hole:nth-child(3){
  -webkit-transform: scale(0.65);
  transform: scale(0.65);
  opacity: 0.5;
  z-index: -2;
}

.black-hole:nth-child(4){
  -webkit-transform: scale(0.55);
  transform: scale(0.55);
  opacity: 0.275;
  z-index: -3;
}

.black-hole:nth-child(5){
  -webkit-transform: scale(0.45);
  transform: scale(0.45);
  opacity: 0.1;
  z-index: -4;
}

.t3d-layer{
  margin-left: auto;
  margin-right: auto;
  max-width: 1000px;
}

@media screen and (min-width: 42em) {
  .lightfx,
  .t3d-layer{
    width: 60%;
  }

  .lightfx{
     margin-top: -40vw;
  }

  .t3d-layer{
    margin-top: -27.5vw;
  }
}

@media screen and (max-width: 42em) {
  .lightfx,
  .t3d-layer{
    width: 100%;
  }

  .lightfx{
    margin-top: -75vw;
  }

  .t3d-layer{
    margin-top: -47.5vw;
  }
}

.gravity {
  position: relative;
}

.preview {
  -moz-user-select: none;
  -webkit-user-select: none;
}

